- Bug: Query caching may give incorrect caching results when bindParam or bindValue is used (Qiang)
- Bug: Changing CActiveForm.errorMessageCssClass had no effect when ajax and client validation were disabled (Y!!)
- Bug: Error when using CUniqueValidator with models indexed by specific field (Sam Dark, Yiivgeny)
- Enh #2319: Added support to call behavior scope through criteria 'with'=>array('scopes'=>'behaviorScope') (Sam Dark, creocoder)
- Enh #2262: Added warning log when a session fails to start by CHttpSession (Qiang)
- Enh #2268: Added CClientScript::getPackageBaseUrl() (Qiang)
- Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
- Enh #2299: Added CAssetManager.newFileMode and newDirMode (Qiang)
- Enh #2325: Added $option parameter to CDbCommand::select() to support special SELECT syntax (Qiang)
- Enh #2341: More verbose log message for CModel::onUnsafeAttribute. Added model class (Sam Dark)
- Enh #2357: Documented CWebApplication accessors with @property for better IDE autocomplete (Sam Dark)
- Enh #2361: Added CDbConnection::pdoClass that allows to specify and use custom PDO wrapper class (Sam Dark)
- Enh #2389: MessageCommand now accepts overwrite option determining if merge result will overwrite existing file (Sam Dark)
- Enh #2424: CDbConnection::beginTransaction() will now trigger a trace message for better debugging (Y!!)
- Enh #2450: Added Ctype extension check to Yii requirements checker (Sam Dark)
- Enh #2474: Enhanced CDbCommand::insert() and update() to support CDbExpression (Qiang)
- Enh #2483: Added CGridView::$ajaxUrl and CListView::$ajaxUrl (Qiang)
- Enh #2500: Added possibility to use a custom click handler for CButtonColumn default delete button (mdomba)
- Enh #2524: CActiveRecord::exists() now respects the scopes applied (Qiang)
- Enh #2532: Improved Yii class autoloader to support Web servers that do not allow changing PHP include paths. (Qiang)